add car api and update configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,12 @@ logging.level.com.edu.cqupt=INFO
 #logging.level.org.hibernate.type=TRACE
 
 //最大允许上传10M
-spring.http.multipart.max-file-size: 10240KB
-spring.http.multipart.max-request-size: 10240KB
+spring.http.multipart.max-file-size: 10MB
+spring.http.multipart.max-request-size: 10MB
+
+file.upload.root=/users/cc/Dev/web/Sites/static
+file.upload.image.root=img
+file.upload.image.mime.type=image/png,image/jpeg,image/jpg,image/gif
+file.upload.image.size.max=1048576
 
 
