--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,11 @@ repositories {
 
 dependencies {
     compile('com.google.code.gson:gson:2.6.2')
+    compile('com.google.guava:guava:19.0')
     compile('org.apache.commons:commons-lang3:3.4')
+
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
+    compile group: 'commons-io', name: 'commons-io', version: '2.5'
 
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-security')
