--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     compile('com.google.guava:guava:19.0')
     compile('org.apache.commons:commons-lang3:3.4')
 
+    compile('net.kaczmarzyk:specification-arg-resolver:0.9.1')
+
     compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
 
@@ -37,6 +39,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-security')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-data-rest')
+    compile('org.springframework.data:spring-data-jpa')
 
     compile('mysql:mysql-connector-java')
 
